# pavel

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
app/: layout.tsx  page.tsx
app/api/datasets/: route.ts
app/api/datasets/[id]/: route.ts
app/pavel/: globals.css  layout.tsx  page.tsx  store.ts  types.ts
app/pavel/components/: creator-info.tsx  critical-path-summary.tsx  execution-summary.tsx  file-upload.tsx  loading-overlay.tsx  model-details.tsx  model-search.tsx  sample-data-config.tsx  types.ts  worker-activity-chart.tsx
app/pavel/components/timeline/: CriticalPath.tsx  CriticalPathConnections.tsx  ModelBars.tsx  TimeAxis.tsx  WorkerActivityChart.tsx  index.tsx
app/pavel/res/: page.tsx
app/pavel/utils/: critical-path.ts  data-parsing.ts  time-utils.ts
components/ui/: card.tsx
lib/: dataset-store.ts
pavel-sdk/: README.md  pyproject.toml
pavel-sdk/src/pavel_sdk/: __init__.py  cli.py  critical_path.py  dashboard.py  data.py
pavel-sdk/tests/: test_data.py
