[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pavel-sdk"
version = "0.1.0"
description = "Local dashboard for exploring dbt execution artifacts"
readme = "README.md"
authors = [
  { name = "Pavel" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "dash>=2.14",
  "pandas>=2.1",
  "plotly>=5.18",
  "numpy>=1.24",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/your-org/pavel-sdk"
Source = "https://github.com/your-org/pavel-sdk"

[project.scripts]
pavel-sdk = "pavel_sdk.cli:main"
